@@ -1,26 +1,42 @@
 package bunny.boardhole.shared.exception;
 
-import bunny.boardhole.shared.config.log.RequestLoggingFilter;
+import java.net.URI;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+
 import jakarta.servlet.http.HttpServletRequest;
-import org.junit.jupiter.api.*;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.*;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.slf4j.MDC;
 import org.springframework.context.MessageSource;
 import org.springframework.context.i18n.LocaleContextHolder;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.*;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ProblemDetail;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.test.util.ReflectionTestUtils;
-import org.springframework.validation.*;
+import org.springframework.validation.BindingResult;
+import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 
-import java.net.URI;
-import java.util.*;
+import bunny.boardhole.shared.config.log.RequestLoggingFilter;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.isNull;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("GlobalExceptionHandler 테스트")
@@ -58,8 +74,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "게시글을 찾을 수 없습니다";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.not-found"), isNull(), any(Locale.class)))
-                .thenReturn("리소스를 찾을 수 없음");
+        when(messageSource.getMessage(eq("exception.title.not-found"), isNull(), any(Locale.class))).thenReturn("리소스를 찾을 수 없음");
 
         // When
         ProblemDetail result = handler.handleNotFound(ex, request);
@@ -85,8 +100,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "중복된 데이터입니다";
         ConflictException ex = new ConflictException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.conflict"), isNull(), any(Locale.class)))
-                .thenReturn("데이터 충돌");
+        when(messageSource.getMessage(eq("exception.title.conflict"), isNull(), any(Locale.class))).thenReturn("데이터 충돌");
 
         // When
         ProblemDetail result = handler.handleConflict(ex, request);
@@ -108,8 +122,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "이미 사용 중인 사용자명입니다";
         DuplicateUsernameException ex = new DuplicateUsernameException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.duplicate-username"), isNull(), any(Locale.class)))
-                .thenReturn("중복된 사용자명");
+        when(messageSource.getMessage(eq("exception.title.duplicate-username"), isNull(), any(Locale.class))).thenReturn("중복된 사용자명");
 
         // When
         ProblemDetail result = handler.handleDuplicateUsername(ex, request);
@@ -131,8 +144,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "이미 사용 중인 이메일입니다";
         DuplicateEmailException ex = new DuplicateEmailException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.duplicate-email"), isNull(), any(Locale.class)))
-                .thenReturn("중복된 이메일");
+        when(messageSource.getMessage(eq("exception.title.duplicate-email"), isNull(), any(Locale.class))).thenReturn("중복된 이메일");
 
         // When
         ProblemDetail result = handler.handleDuplicateEmail(ex, request);
@@ -154,8 +166,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "인증이 필요합니다";
         UnauthorizedException ex = new UnauthorizedException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.unauthorized"), isNull(), any(Locale.class)))
-                .thenReturn("인증 실패");
+        when(messageSource.getMessage(eq("exception.title.unauthorized"), isNull(), any(Locale.class))).thenReturn("인증 실패");
 
         // When
         ProblemDetail result = handler.handleUnauthorized(ex, request);
@@ -177,8 +188,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "접근 권한이 없습니다";
         AccessDeniedException ex = new AccessDeniedException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.access-denied"), isNull(), any(Locale.class)))
-                .thenReturn("접근 거부");
+        when(messageSource.getMessage(eq("exception.title.access-denied"), isNull(), any(Locale.class))).thenReturn("접근 거부");
 
         // When
         ProblemDetail result = handler.handleAccessDenied(ex, request);
@@ -206,8 +216,7 @@ class GlobalExceptionHandlerTest {
 
         when(ex.getBindingResult()).thenReturn(bindingResult);
         when(bindingResult.getFieldErrors()).thenReturn(List.of(fieldError1, fieldError2));
-        when(messageSource.getMessage(eq("exception.title.validation-failed"), isNull(), any(Locale.class)))
-                .thenReturn("유효성 검증 실패");
+        when(messageSource.getMessage(eq("exception.title.validation-failed"), isNull(), any(Locale.class))).thenReturn("유효성 검증 실패");
 
         // When
         ResponseEntity<ProblemDetail> response = handler.handleInvalid(ex, request);
@@ -225,14 +234,8 @@ class GlobalExceptionHandlerTest {
 
         @SuppressWarnings("unchecked") List<Map<String, Object>> errors = (List<Map<String, Object>>) validationProperties.get("errors");
         assertThat(errors).hasSize(2);
-        assertThat(errors.get(0))
-                .containsEntry("field", "title")
-                .containsEntry("message", "제목을 입력해주세요")
-                .containsEntry("rejectedValue", "제목");
-        assertThat(errors.get(1))
-                .containsEntry("field", "content")
-                .containsEntry("message", "내용을 입력해주세요")
-                .containsEntry("rejectedValue", "");
+        assertThat(errors.getFirst()).containsEntry("field", "title").containsEntry("message", "제목을 입력해주세요").containsEntry("rejectedValue", "제목");
+        assertThat(errors.get(1)).containsEntry("field", "content").containsEntry("message", "내용을 입력해주세요").containsEntry("rejectedValue", "");
     }
 
     @Test
@@ -242,8 +245,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "잘못된 인자입니다";
         IllegalArgumentException ex = new IllegalArgumentException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.bad-request"), isNull(), any(Locale.class)))
-                .thenReturn("잘못된 요청");
+        when(messageSource.getMessage(eq("exception.title.bad-request"), isNull(), any(Locale.class))).thenReturn("잘못된 요청");
 
         // When
         ProblemDetail result = handler.handleBadRequest(ex, request);
@@ -265,8 +267,7 @@ class GlobalExceptionHandlerTest {
         setupRequestMock();
         final String errorMessage = "데이터 무결성 위반";
         DataIntegrityViolationException ex = new DataIntegrityViolationException(errorMessage);
-        when(messageSource.getMessage(eq("exception.title.conflict"), isNull(), any(Locale.class)))
-                .thenReturn("데이터 충돌");
+        when(messageSource.getMessage(eq("exception.title.conflict"), isNull(), any(Locale.class))).thenReturn("데이터 충돌");
 
         // When
         ProblemDetail result = handler.handleConflict(ex, request);
@@ -287,10 +288,8 @@ class GlobalExceptionHandlerTest {
         // Given
         setupRequestMock();
         Exception ex = new RuntimeException("Unexpected error");
-        when(messageSource.getMessage(eq("error.internal"), isNull(), any(Locale.class)))
-                .thenReturn("서버 내부 오류가 발생했습니다");
-        when(messageSource.getMessage(eq("exception.title.internal-error"), isNull(), any(Locale.class)))
-                .thenReturn("내부 서버 오류");
+        when(messageSource.getMessage(eq("error.internal"), isNull(), any(Locale.class))).thenReturn("서버 내부 오류가 발생했습니다");
+        when(messageSource.getMessage(eq("exception.title.internal-error"), isNull(), any(Locale.class))).thenReturn("내부 서버 오류");
 
         // When
         ProblemDetail result = handler.handleUnexpected(ex, request);
@@ -313,8 +312,7 @@ class GlobalExceptionHandlerTest {
         ReflectionTestUtils.setField(handler, "problemBaseUri", "https://api.boardhole.com/problems");
         final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class)))
-                .thenReturn("테스트 제목");
+        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class))).thenReturn("테스트 제목");
 
         // When
         ProblemDetail result = handler.handleNotFound(ex, request);
@@ -331,8 +329,7 @@ class GlobalExceptionHandlerTest {
         ReflectionTestUtils.setField(handler, "problemBaseUri", "https://api.boardhole.com/problems/");
         final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class)))
-                .thenReturn("테스트 제목");
+        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class))).thenReturn("테스트 제목");
 
         // When
         ProblemDetail result = handler.handleNotFound(ex, request);
@@ -349,8 +346,7 @@ class GlobalExceptionHandlerTest {
         MDC.clear(); // Remove traceId
         final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
-        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class)))
-                .thenReturn("테스트 제목");
+        when(messageSource.getMessage(anyString(), isNull(), any(Locale.class))).thenReturn("테스트 제목");
 
         // When
         ProblemDetail result = handler.handleNotFound(ex, request);
@@ -367,8 +363,8 @@ class GlobalExceptionHandlerTest {
         final String errorMessage = "테스트 오류";
         ResourceNotFoundException ex = new ResourceNotFoundException(errorMessage);
 
-        // When
-        ProblemDetail result = handler.handleNotFound(ex, null);
+        // When - null request for testing null handling behavior
+        @SuppressWarnings("DataFlowIssue") ProblemDetail result = handler.handleNotFound(ex, null);
 
         // Then
         assertThat(result.getProperties()).containsKey("timestamp");
